--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation "com.google.android.gms:play-services-places:11.8.0"
     // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit:retrofit:1.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
 
     //gilde
