--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,14 +37,21 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation "com.google.android.gms:play-services-places:11.8.0"
-    // retrofit
-    implementation 'com.squareup.retrofit:retrofit:1.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+
+//    // retrofit
+//    implementation 'com.squareup.retrofit:retrofit:1.9.0'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.0'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
 
     //gilde
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation 'org.apache.commons:commons-io:1.3.2'
+
+    //razorpay
+    implementation 'com.razorpay:checkout:1.4.9'
 
 }
 apply plugin: 'com.google.gms.google-services'
