one wel basic version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,10 @@ dependencies {
     implementation "com.google.android.gms:play-services-places:11.8.0"
 
 //    // retrofit
-//    implementation 'com.squareup.retrofit:retrofit:1.9.0'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation 'com.squareup.retrofit:retrofit:1.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.0.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.0.0'
+
     implementation 'com.mcxiaoke.volley:library:1.0.19'
 
     //gilde
