--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation "com.google.android.gms:play-services-places:11.8.0"
 
+    //runtime permission
+
+    implementation 'com.karumi:dexter:5.0.0'
+
+    implementation 'pub.devrel:easypermissions:0.2.0'
+
+
+
 //    // retrofit
     implementation 'com.squareup.retrofit:retrofit:1.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
