--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,31 +8,50 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:name=".Api.AppController"
         android:allowBackup="true"
-        android:hardwareAccelerated="false"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/one_wel_loge"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@drawable/one_wel_loge"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UI.CustomerVerification"
+        <activity android:name=".UI.providers.ProviderSignUpImage"
             android:theme="@style/AppTheme"
-            android:parentActivityName=".UI.MainActivity"></activity>
+            android:parentActivityName=".UI.providers.ProviderSignUpActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".UI.Agent.AgentSignUpImage"
+            android:parentActivityName=".UI.Agent.AgentSignUPBankDetails"
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".UI.Agent.AgentSignUPBankDetails"
+            android:parentActivityName=".UI.Agent.AgentSignUpActivity"
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".UI.CustomerVerification"
+            android:parentActivityName=".UI.MainActivity"
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".UI.CustomerRegistrationActivity"
             android:parentActivityName=".UI.MainActivity"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".UI.SplashScreenActivity"
-            android:theme="@style/AppTheme1" />
+            android:theme="@style/AppTheme1"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".UI.MainActivity"
-            android:theme="@style/AppTheme1">
+            android:theme="@style/AppTheme1"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,11 +61,13 @@
         <activity
             android:name=".UI.Agent.AgentLoginActivity"
             android:parentActivityName=".UI.MainActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".UI.Agent.AgentSignUpActivity"
             android:parentActivityName=".UI.Agent.AgentLoginActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -55,19 +76,23 @@
         <activity
             android:name=".UI.providers.ProviderSignUpActivity"
             android:parentActivityName=".UI.MainActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".UI.Agent.AgentProfileSettings"
             android:parentActivityName=".UI.MainActivity"
-            android:theme="@style/AppTheme1" />
+            android:theme="@style/AppTheme1"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".UI.BlockSearchItemActivity"
             android:parentActivityName=".UI.MainActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".UI.PaymentActivity"
             android:parentActivityName=".UI.MainActivity"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="com.razorpay.ApiKey"
